# tiny_std

./: .clang-format  CMakeLists.txt  README.md
doc/smart_ptr/: shared_ptr.md  unique_ptr.md
incl/functional/: function.h  ref_wrap.h
incl/smart_ptr/: shared_ptr.h  shared_ptr_base.h  unique_ptr.h
src/: main.cpp
test/: test_unique_ptr.cpp
